Added more data validation, cleaning and started SQL schema

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1353,161 +1353,248 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine, MetaData, Table, Column, Integer, String, Float, Date, ForeignKey\n",
+    "from sqlalchemy import (\n",
+    "    create_engine,\n",
+    "    MetaData,\n",
+    "    Table,\n",
+    "    Column,\n",
+    "    Integer,\n",
+    "    String,\n",
+    "    Float,\n",
+    "    Boolean,\n",
+    "    Date,\n",
+    "    ForeignKey,\n",
+    ")\n",
     "import re\n",
+    "\n",
+    "from update_psql import (\n",
+    "    conn_to_psql,\n",
+    "    upload_to_psql,\n",
+    "    close_conn_to_sql,\n",
+    ")\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "df = pd.read_csv(\"glassdoor_dataset/glassdoor.csv\")\n",
     "\n",
     "\n",
-    "# Filtering the main glassdoor.csv file, a lot of columns are HTML related elements that are not very relevant for an analytical purpose.\n",
+    "# Replace dots with underscores in column names for better SQL compatibility in queries\n",
+    "df.columns = [col.replace('.', '_') for col in df.columns]\n",
     "\n",
+    "\n",
+    "# Filtering the main glassdoor.csv file, a lot of columns are HTML related elements that are not very relevant for our purpose.\n",
     "filtered_df = df.loc[\n",
     "    :,\n",
     "    [\n",
-    "        \"gaTrackerData.jobTitle\",\n",
-    "        \"gaTrackerData.location\",\n",
-    "        \"gaTrackerData.locationType\",\n",
-    "        \"gaTrackerData.sector\",\n",
-    "        \"header.easyApply\",\n",
-    "        \"header.employerName\",\n",
-    "        \"header.jobTitle\",\n",
-    "        \"header.location\",  # Location City (most of times)\n",
-    "        \"header.posted\",  # Date job was posted\n",
-    "        \"header.rating\",  # Company rating by employees\n",
-    "        \"header.urgencyLabel\",  # Misleading column name, it actually indicates the presence of the \"2019 Glassdoor Best Place to Work\" award on the job posting\n",
-    "        \"header.payHigh\",\n",
-    "        \"header.payMed\",\n",
-    "        \"header.payLow\",\n",
-    "        \"job.description\",\n",
-    "        \"job.jobSource\",\n",
-    "        \"map.country\",  # do something with country_names_2_digit_codes\n",
-    "        \"map.employerName\",\n",
-    "        \"map.lat\",  # 0 for NaN\n",
-    "        \"map.lng\",  # 0 for NaN\n",
-    "        \"map.location\",\n",
-    "        \"overview.foundedYear\",  # 0 for NaN\n",
-    "        \"overview.hq\",\n",
-    "        \"overview.industry\",\n",
-    "        \"overview.revenue\",\n",
-    "        \"overview.sector\",\n",
-    "        \"overview.size\",\n",
-    "        \"overview.stock\",\n",
-    "        \"overview.type\",\n",
-    "        \"overview.description\",\n",
-    "        \"overview.mission\",\n",
-    "        \"overview.competitors\",  # foreign key\n",
-    "        \"rating.ceo.name\",\n",
-    "        \"rating.ceoApproval\",  # <0 or NaN for missing data\n",
-    "        \"rating.recommendToFriend\",  # <0 or NaN for missing data\n",
-    "        \"rating.starRating\",\n",
-    "        \"benefits.comments\",  # foreign key\n",
-    "        \"benefits.highlights\",  # foreign key\n",
+    "        \"gaTrackerData_jobTitle\",\n",
+    "        \"gaTrackerData_location\",\n",
+    "        \"gaTrackerData_locationType\",\n",
+    "        \"gaTrackerData_sector\",\n",
+    "        \"header_easyApply\",\n",
+    "        \"header_employerName\",\n",
+    "        \"header_jobTitle\",\n",
+    "        \"header_location\",  # Location City (most of times)\n",
+    "        \"header_posted\",  # Date job was posted\n",
+    "        \"header_rating\",  # Company rating by employees\n",
+    "        \"header_urgencyLabel\",  # Misleading column name, it actually indicates the presence of the \"2019 Glassdoor Best Place to Work\" award on the job posting\n",
+    "        \"header_payHigh\",\n",
+    "        \"header_payMed\",\n",
+    "        \"header_payLow\",\n",
+    "        \"job_description\",\n",
+    "        \"job_jobSource\",\n",
+    "        \"map_country\",  # do something with country_names_2_digit_codes\n",
+    "        \"map_employerName\",\n",
+    "        \"map_lat\",  # 0 for NaN\n",
+    "        \"map_lng\",  # 0 for NaN\n",
+    "        \"map_location\",\n",
+    "        \"overview_foundedYear\",  # 0 for NaN\n",
+    "        \"overview_hq\",\n",
+    "        \"overview_industry\",\n",
+    "        \"overview_revenue\",\n",
+    "        \"overview_sector\",\n",
+    "        \"overview_size\",\n",
+    "        \"overview_stock\",\n",
+    "        \"overview_type\",\n",
+    "        \"overview_description\",\n",
+    "        \"overview_mission\",\n",
+    "        \"overview_competitors\",  # foreign key\n",
+    "        \"rating_ceo_name\",\n",
+    "        \"rating_ceoApproval\",  # <0 or NaN for missing data\n",
+    "        \"rating_recommendToFriend\",  # <0 or NaN for missing data\n",
+    "        \"rating_starRating\",\n",
+    "        \"benefits_comments\",  # foreign key\n",
+    "        \"benefits_highlights\",  # foreign key\n",
     "        \"reviews\",  # foreign key\n",
-    "        \"salary.salaries\",  # foreign key\n",
+    "        \"salary_salaries\",  # foreign key\n",
     "        \"wwfu\",  # foreign key\n",
     "    ],\n",
     "]\n",
     "\n",
     "\n",
+    "# Transform columns with floats having zero decimal value into integers\n",
+    "columns_to_int = [\n",
+    "    \"header_payHigh\",\n",
+    "    \"header_payMed\",\n",
+    "    \"header_payLow\",\n",
+    "    \"overview_foundedYear\",\n",
+    "    \"overview_competitors\",\n",
+    "    \"benefits_comments\",\n",
+    "    \"benefits_highlights\",\n",
+    "    \"wwfu\",\n",
+    "]\n",
+    "\n",
+    "for column in columns_to_int:\n",
+    "    filtered_df[column] = filtered_df[column].apply(lambda x: int(x) if pd.notna(x) else x)\n",
+    "\n",
     "# Replace negative values with NaN\n",
     "columns_to_replace_neg = [\n",
-    "    \"header.rating\",\n",
-    "    \"rating.starRating\",\n",
-    "    \"rating.ceoApproval\",\n",
-    "    \"rating.recommendToFriend\",\n",
+    "    \"header_rating\",\n",
+    "    \"rating_starRating\",\n",
+    "    \"rating_ceoApproval\",\n",
+    "    \"rating_recommendToFriend\",\n",
     "]\n",
     "for column in columns_to_replace_neg:\n",
     "    filtered_df[column] = filtered_df[column].apply(lambda x: np.nan if x < 0 else x)\n",
     "\n",
-    "\n",
     "# Replace zero values with NaN\n",
     "columns_to_replace_zero = [\n",
-    "    \"map.lat\",\n",
-    "    \"map.lng\",\n",
+    "    \"map_lat\",\n",
+    "    \"map_lng\",\n",
     "]\n",
     "for column in columns_to_replace_zero:\n",
     "    filtered_df[column] = filtered_df[column].apply(lambda x: np.nan if x == 0 else x)\n",
     "\n",
-    "\n",
     "# Replace outlier/erroneous low salaries values with NaN\n",
     "columns_to_replace_outlier_salaries = [\n",
-    "    \"header.payHigh\",\n",
-    "    \"header.payMed\",\n",
-    "    \"header.payLow\",\n",
-    "    \"salary.salaries\",\n",
+    "    \"header_payHigh\",\n",
+    "    \"header_payMed\",\n",
+    "    \"header_payLow\",\n",
+    "    \"salary_salaries\",\n",
     "]\n",
     "for column in columns_to_replace_outlier_salaries:\n",
-    "    filtered_df[column] = filtered_df[column].apply(lambda x: np.nan if x < 10000 else x)\n",
-    "    \n",
+    "    filtered_df[column] = filtered_df[column].apply(\n",
+    "        lambda x: np.nan if x < 10000 else x\n",
+    "    )\n",
     "\n",
-    "# Replace outlier/erroneous low salaries values with NaN\n",
-    "columns_to_replace_outlier_salaries = [\n",
-    "    \"header.payHigh\",\n",
-    "    \"header.payMed\",\n",
-    "    \"header.payLow\",\n",
-    "    \"salary.salaries\",\n",
-    "]\n",
-    "for column in columns_to_replace_outlier_salaries:\n",
-    "    filtered_df[column] = filtered_df[column].apply(lambda x: np.nan if x < 10000 else x)\n",
-    "    \n",
     "# Replace outlier/erroneous years values with NaN\n",
     "columns_to_replace_outlier_years = [\n",
-    "    \"overview.foundedYear\",\n",
+    "    \"overview_foundedYear\",\n",
     "]\n",
     "for column in columns_to_replace_outlier_years:\n",
     "    filtered_df[column] = filtered_df[column].apply(lambda x: np.nan if x < 1000 else x)\n",
     "\n",
-    "\n",
     "# Remove only rows with all missing values\n",
-    "filtered_df.dropna(how='all', inplace=True)\n",
+    "filtered_df.dropna(how=\"all\", inplace=True)\n",
     "\n",
     "# Remove duplicates\n",
     "filtered_df.drop_duplicates(inplace=True)\n",
     "\n",
-    "\n",
     "def clean_job_description(text):\n",
-    "    \n",
     "    if text is None or pd.isna(text):\n",
     "        return text\n",
-    "    \n",
+    "\n",
     "    # Remove HTML tags\n",
-    "    text = re.sub('<[^>]+>', '', text)\n",
-    "    \n",
+    "    text = re.sub(\"<[^>]+>\", \"\", text)\n",
+    "\n",
     "    # Remove HTML entities\n",
-    "    text = re.sub('&\\w+;|&#\\d+;', '', text)\n",
-    "    \n",
+    "    text = re.sub(\"&\\w+;|&#\\d+;\", \"\", text)\n",
+    "\n",
     "    # Convert text to lowercase\n",
     "    text = text.lower()\n",
-    "    \n",
+    "\n",
     "    # Remove unwanted characters\n",
-    "    text = re.sub('[^\\w\\s]+', ' ', text)\n",
-    "    \n",
+    "    text = re.sub(\"[^\\w\\s]+\", \" \", text)\n",
+    "\n",
     "    # Remove extra spaces\n",
-    "    text = re.sub('\\s+', ' ', text)\n",
-    "    \n",
+    "    text = re.sub(\"\\s+\", \" \", text)\n",
+    "\n",
     "    # Strip leading/trailing spaces\n",
     "    text = text.strip()\n",
     "\n",
     "    return text\n",
     "\n",
-    "\n",
-    "\n",
-    "filtered_df['job.description'] = filtered_df['job.description'].apply(clean_job_description)\n",
-    "\n",
-    "\n",
+    "filtered_df[\"job_description\"] = filtered_df[\"job_description\"].apply(\n",
+    "    clean_job_description\n",
+    ")\n",
     "\n",
     "print(f\"dtypes : \\n{filtered_df.dtypes}\\n\\n\")\n",
-    "print(f\"Non-NaN percentage : \\n{(filtered_df.count()/ len(filtered_df) * 100).round(2)}%\")\n",
+    "print(\n",
+    "    f\"Non-NaN percentage : \\n{(filtered_df.count()/ len(filtered_df) * 100).round(2)}%\"\n",
+    ")\n",
     "print(\"\\n\\n\\n%%%%%%%%%%%%%%%%%%%%%%%%\\n\\n\\n\")\n",
     "print(filtered_df.head(60))\n",
     "print(filtered_df.columns)\n",
     "print(f\"There are {len(filtered_df.columns)} columns\")\n",
     "print(filtered_df.describe())\n",
     "\n",
-    "# print(filtered_df['job.description'][22])\n",
-    "# print(filtered_df['job.description'][23])\n"
+    "\n",
+    "# To ensure correctness of data type constraints, we create a dict to map each column to its corresponding SQLAlchemy data type\n",
+    "column_data_types = {\n",
+    "    \"gaTrackerData_jobTitle\": String,\n",
+    "    \"gaTrackerData_location\": String,\n",
+    "    \"gaTrackerData_locationType\": String,\n",
+    "    \"gaTrackerData_sector\": String,\n",
+    "    \"header_easyApply\": Boolean,\n",
+    "    \"header_employerName\": String,\n",
+    "    \"header_jobTitle\": String,\n",
+    "    \"header_location\": String,\n",
+    "    \"header_posted\": String,\n",
+    "    \"header_rating\": Float,\n",
+    "    \"header_urgencyLabel\": String,\n",
+    "    \"header_payHigh\": Integer,\n",
+    "    \"header_payMed\": Integer,\n",
+    "    \"header_payLow\": Integer,\n",
+    "    \"job_description\": String,\n",
+    "    \"job_jobSource\": String,\n",
+    "    \"map_country\": String,\n",
+    "    \"map_employerName\": String,\n",
+    "    \"map_lat\": Float,\n",
+    "    \"map_lng\": Float,\n",
+    "    \"map_location\": String,\n",
+    "    \"overview_foundedYear\": Integer,\n",
+    "    \"overview_hq\": String,\n",
+    "    \"overview_industry\": String,\n",
+    "    \"overview_revenue\": String,\n",
+    "    \"overview_sector\": String,\n",
+    "    \"overview_size\": String,\n",
+    "    \"overview_stock\": String,\n",
+    "    \"overview_type\": String,\n",
+    "    \"overview_description\": String,\n",
+    "    \"overview_mission\": String,\n",
+    "    \"overview_competitors\": Integer,\n",
+    "    \"rating_ceo_name\": String,\n",
+    "    \"rating_ceoApproval\": Float,\n",
+    "    \"rating_recommendToFriend\": Float,\n",
+    "    \"rating_starRating\": Float,\n",
+    "    \"benefits_comments\": Integer,\n",
+    "    \"benefits_highlights\": Integer,\n",
+    "    \"reviews\": Integer,\n",
+    "    \"salary_salaries\": Float,\n",
+    "    \"wwfu\": Integer,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "pool, connector = conn_to_psql()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Upload the DataFrame to the database using df.to_sql()\n",
+    "df.to_sql('users', pool, if_exists='replace', index=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "filtered_df.to_sql(SQL_DB_TABLE_NAME2, pool, if_exists=\"replace\", index=False, dtype=column_data_types)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "close_conn_to_sql(pool, connector)"
    ]
   },
   {
