All SQL queries creating tables done

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1894,12 +1894,12 @@
     "    wwf_val_id INTEGER,\n",
     "    wwf_val_title VARCHAR,\n",
     "    wwf_val_type VARCHAR,\n",
-    "    wwf_val_videos INTEGER,\n",
+    "    FOREIGN KEY (wwf_val_videos) INTEGER,\n",
     "    wwf_val_photos INTEGER,\n",
     "    wwf_val_captions INTEGER\n",
     ");\n",
     "'''\n",
-    "\n",
+    "FOREIGN KEY (overview_competitors) REFERENCES glassdoor_overview_competitors(id),\n",
     "\n",
     "\n",
     "df_wvc = pd.read_csv(\"glassdoor_dataset/glassdoor_wwfu_val_captions.csv\")\n",
